# ML_HW_HSE_AI

./: .gitignore  README.md
hw1/: conclusion.md  model.pkl  pyproject.toml  service.py  utils.py
