[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["KuBaN658 <garkovski_dmitri@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
pandas = "^2.2.3"
uvicorn = "^0.32.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ydata-profiling = "^4.12.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
